@@ -15,6 +15,7 @@ Version 1.3-svn:
    * allow_new_game key (default=yes) to prevent [multiplayer] scenarios to
      show up in the multiplayer game creation interface (FR #6397)
    * new [set_specials] tag to allow custom special in effect tags
+   * new remove_specials=<id_list> key to allow to remove specials in effect tags
    * obsolete set_special= in [effect] tags
 
 Version 1.1.7:
